--- a/src/components/Certifications/CertCard.module.css
+++ b/src/components/Certifications/CertCard.module.css
@@ -2,9 +2,9 @@
   background: rgba(255, 255, 255, 0.4);
   border-radius: 30px;
   box-shadow: 0px 3px 15px -1px #000000;
-  width: 500px;
+  min-width: 300px;
+  max-width: 670px;
   margin: 30px;
-  min-height: 500px;
   opacity: 0.6;
   overflow: hidden;
   transition: all ease 0.5s;
