--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,15 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #616161;
+  background: #333;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #aaa;
+  background: rgba(170, 170, 170, 0.5);
   border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(170, 170, 170, 1);
 }
