--- a/src/components/PortfolioContainer/ProjectCard.module.css
+++ b/src/components/PortfolioContainer/ProjectCard.module.css
@@ -20,7 +20,7 @@
 }
 
 img {
-  height: 50%;
+  /* height: 50%; */
   width: 100%;
 }
 
@@ -77,6 +77,7 @@ hr {
 
 @media (max-width: 450px) {
   .item {
+    height: 480px;
     opacity: 1;
   }
 
