--- a/src/components/PortfolioContainer/Projects.module.css
+++ b/src/components/PortfolioContainer/Projects.module.css
@@ -7,3 +7,11 @@
   background: #454545;
   margin: auto;
 }
+
+.title {
+  text-align: center;
+  color: #dddddd;
+  font-size: 2rem;
+  font-weight: 300;
+  margin: 20px 0 50px 0;
+}
