--- a/src/components/Certifications/Modal.module.css
+++ b/src/components/Certifications/Modal.module.css
@@ -36,6 +36,13 @@
   }
 }
 
+@media (min-width: 1000px) and (max-width: 1600px) {
+  .modal {
+    width: 45rem;
+    left: calc(50% - 22rem);
+  }
+}
+
 @keyframes slide-down {
   from {
     opacity: 0;
