--- a/src/components/TechStack/TechStack.module.css
+++ b/src/components/TechStack/TechStack.module.css
@@ -1,7 +1,7 @@
 .container {
   background: #333;
-  height: 150px;
-  padding-top: 20px;
+  width: 100%;
+  padding: 20px 0 20px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -27,6 +27,6 @@
 
 @media (max-width: 450px) {
   .container {
-    height: 300px;
+    /* height: 300px; */
   }
 }
