--- a/src/components/MainContainer/MainContainer.module.css
+++ b/src/components/MainContainer/MainContainer.module.css
@@ -1,11 +1,21 @@
 .container {
   height: 100vh;
   position: relative;
+  display: flex;
+  border-bottom: 2px solid #aaa;
+}
+
+.left {
+  background-color: #333333;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23aaaaaa' fill-opacity='0.5' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  height: 100vh;
+  width: 50%;
   border-bottom: 2px solid #aaa;
 }
 
 .right {
-  background-color: #333;
+  background-color: #454545;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23aaaaaa' fill-opacity='0.45' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
   height: 100vh;
   width: 50%;
   border-bottom: 2px solid #aaa;
