--- a/src/components/PortfolioContainer/ProjectCard.module.css
+++ b/src/components/PortfolioContainer/ProjectCard.module.css
@@ -2,8 +2,8 @@
   border-radius: 50px;
   background: rgba(255, 255, 255, 0.4);
   box-shadow: 0px 3px 15px -1px #000000;
-  height: 550px;
-  width: 450px;
+  min-height: 500px;
+  width: 400px;
   margin: 30px;
   overflow: hidden;
   position: relative;
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   transition: all ease 0.5s;
 }
 
@@ -19,8 +20,13 @@
   transform: scale(1.035);
 }
 
+.head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 img {
-  /* height: 50%; */
   width: 100%;
 }
 
@@ -47,8 +53,6 @@ hr {
 }
 
 .buttons {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -77,7 +81,7 @@ hr {
 
 @media (max-width: 450px) {
   .item {
-    height: 480px;
+    min-height: 480px;
     opacity: 1;
   }
 
