Add new project Fix project card buttons

--- a/src/components/PortfolioContainer/ProjectCard.module.css
+++ b/src/components/PortfolioContainer/ProjectCard.module.css
@@ -59,8 +59,13 @@ hr {
 }
 
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
-  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 1.3rem;
   height: 65px;
   width: 100%;
   padding: 10px;
@@ -74,9 +79,8 @@ hr {
   background: rgba(255, 255, 255, 0.8);
 }
 
-.btn a {
-  text-decoration: none;
-  color: #333 !important;
+.btn i {
+  margin-right: 7px;
 }
 
 @media (max-width: 450px) {
@@ -87,7 +91,6 @@ hr {
 
   .btn {
     height: 70px;
-    padding-bottom: 65px;
   }
 }
 
