--- a/src/components/PortfolioContainer/ProjectCard.module.css
+++ b/src/components/PortfolioContainer/ProjectCard.module.css
@@ -91,6 +91,12 @@ hr {
 
   .btn {
     height: 70px;
+    flex-direction: column;
+    font-size: 1rem;
+  }
+
+  .btn i {
+    transform: scale(1.5);
   }
 }
 
