--- a/src/components/TechStack/TechStack.module.css
+++ b/src/components/TechStack/TechStack.module.css
@@ -17,6 +17,9 @@
 }
 
 .item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 5px;
   cursor: pointer;
   transition: all ease 0.5s;
