--- a/src/components/TechStack/ToolTip.module.css
+++ b/src/components/TechStack/ToolTip.module.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  padding-left: 2px;
-  padding-right: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 5px;
   background-color: #fff;
   animation: fade ease-in forwards 0.3s;
 }
